Add: about me, gallery, logos

--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
 
       </head>
       <body>
-            <h1>
-                  Hello,
-            </h1>
-            <p>
-                  This is the first version of my website!
-            </p>
+            <header>
+                  <img href="/images/logo-r.png" width="120px" alt="My logo, a simplified cat head.">
+                  <a href="index.html">Main</a>
+                  <a href="about me.html">About Me</a>
+                  <a href="gallery.html">Gallery</a>
+                  <img>
+            </header>
+            <main>
+                  <h1>
+                        Welcome to my site!
+                  </h1>
+                  <p>This is my portfolio site for 2023. </p>
+
+                  <h2>
+                        About Me:
+                  </h2>
+                  <p>I am currently studying graphic design.<a href="about me.html">Read More and contact</a></p>
+
+                  
+
+            </main>
+            <aside>
+
+            </aside>
+            <footer>
+                  <p> &copy; Margaret Johnson, Contact <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a></p>
+            </footer>
       </body>
 </html>
