--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </head>
       <body>
             <header>
-                  <img href="/images/logo-r.png" width="120px" alt="My logo, a simplified cat head.">
+                  <img src="/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head.">
                   <a href="index.html">Main</a>
                   <a href="about me.html">About Me</a>
                   <a href="gallery.html">Gallery</a>
@@ -23,7 +23,7 @@
                   <h2>
                         About Me:
                   </h2>
-                  <p>I am currently studying graphic design.<a href="about me.html">Read More and contact</a></p>
+                  <p>I am currently studying graphic design. <a href="about me.html">Read More and contact</a></p>
 
                   
 
