Update: about me
updated: abut me, headers, gallery placeholder alt text and easter egg

--- a/index.html
+++ b/index.html
@@ -8,31 +8,44 @@
       </head>
       <body>
             <header>
-                  <img src="/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head.">
-                  <a href="index.html">Main</a>
-                  <a href="about me.html">About Me</a>
-                  <a href="gallery.html">Gallery</a>
-                  <img>
+                  <img src="/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
+                  <div class="header-text">
+                        <a href="index.html">Main</a>
+                        <a href="about me.html">About Me</a>
+                        <a href="gallery.html">Gallery</a>
+                  </div>
+                  <img src="">
             </header>
             <main>
                   <h1>
                         Welcome to my site!
                   </h1>
-                  <p>This is my portfolio site for 2023. </p>
+                  <p>This is my portfolio site for 2023. It will be updated.</p>
 
                   <h2>
                         About Me:
                   </h2>
                   <p>I am currently studying graphic design. <a href="about me.html">Read More and contact</a></p>
+                  <figure>
+                        <img src="" alt=""> <!--TODO GET THE IMAGE FROM MUM-->
+                        <figcaption>A photo of me when i gratuated high school</figcaption>
+                  </figure>
 
                   
 
             </main>
-            <aside>
-
-            </aside>
             <footer>
-                  <p> &copy; Margaret Johnson, Contact <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a></p>
+                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a></a>.</p>
             </footer>
       </body>
+      <!--
+         /|_|\   !!
+        ( o O )   ,
+         '==='  / /
+         (    \( (
+          |    \) )
+         / /   _)/ 
+      Suprised Cat, 2023 ascii
+      Margaret Johnson. 
+      -->
 </html>
