--- a/about me.html
+++ b/about me.html
@@ -8,14 +8,54 @@
       </head>
       <body>
             <header>
-
+                  <img src="/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
+                  <div class="header-text">
+                        <a href="index.html">Main</a>
+                        <a href="about me.html">About Me</a>
+                        <a href="gallery.html">Gallery</a>
+                  </div>
+                  <img src="">
             </header>
             <main>
-                  <h1>
-                        About Margaret:
-                  </h1>
-                  <p>Hello, i am margaret and i am studying graphic design at SAIT. </p>
+                  <h1>About Margaret:</h1>
+                  <p>Hello, i am Margaret Rose, Rose is my personal professional branding but you could call me by either name. 
+                  You can see my past work on the <a href="gallery.html">gallery</a> page. <a href="#contact">Contact Info</a></p>
+
+                  <h2>Goals</h2>
+                  <p>My current goal is to graduate from SAIT. My other goal is creating a strong portfolio of art, design and code, then there is also various personal growth goals.</p>
+
+                  <h2>Skills</h2>
+                  <p>I am proficient in Adobe Photoshop and Adobe Illustrator. I am also learning some of the other softwares in the Creative Cloud suite, such as Adobe Premiere Pro. I have a fair understanding of HTML and CSS and am working on imporving it. I've spent time in Blender and understand the basics of 3D graphics but I am very willing to know more. Outside of the computer I have some experience in photography and </p>
+
+                  <h2>Hobbies and Interests</h2>
+                  <p>My current hobbies are reading and crochet. Some of my interests are listening to music, Pokemon, and 3D animation. Sometimes i combine my Hobby of crochet and my interests to make designs, currently i am working on an Eelektrik (from Pokemon) amigurumi and drafting a pattern for a Kinger (from The Digital Circus) amigurumi.</p>
+
+                  <h1 id="contact">Contact me:</h1>
+                  <p>For more professional inquiries reach out on <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>.<br>For informal inquiries you can reach out to me on <a href="">Instagram</a>(Account not up yet.).</p>
+
+                  <!-- i have commmented this out due to the lack of accounts, but these seem to be where i can connect professionally
+                  <h2>Connect with me:</h2>
+                  <p>Connect with me on my professional social media</p>
+                  <img src="" alt="Linkedin Logo">
+                  <img src="" alt="Youtube Logo">
+                  <img src="" alt="Pinterest Logo">
+                  <img src="" alt="Instagram Logo">
+                  -->
+                  <div class="align-left">
+                        <h3>Link to me!</h3>
+                        <code>https://margaretjohnson6.github.io/Portfolio/index.html</code>
+                  </div>
+                  <div class="align-right">
+                        <h3>Link with an image!</h3>
+                        <a><img src="" href="https://margaretjohnson6.github.io/Portfolio/index.html" alt=""></a>
+                        <code></code>
+                  </div>
+                  
+
             </main>
+            <footer>
+                  <p> &copy;2023 Margaret Johnson</p>
+            </footer>
       </body>
             
 </html>
