--- a/about me.html
+++ b/about me.html
@@ -8,7 +8,7 @@
       </head>
       <body>
             <header>
-                  <img src="/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
+                  <img src="Portfolio/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
                   <div class="header-text">
                         <a href="index.html">Main</a>
                         <a href="about me.html">About Me</a>
@@ -22,10 +22,10 @@
                   You can see my past work on the <a href="gallery.html">gallery</a> page. <a href="#contact">Contact Info</a></p>
 
                   <h2>Goals</h2>
-                  <p>My current goal is to graduate from SAIT. My other goal is creating a strong portfolio of art, design and code, then there is also various personal growth goals.</p>
+                  <p>My current goal is to graduate from SAIT. My other goal is creating a strong portfolio of art, design and code, then there is also my various personal growth goals.</p>
 
                   <h2>Skills</h2>
-                  <p>I am proficient in Adobe Photoshop and Adobe Illustrator. I am also learning some of the other softwares in the Creative Cloud suite, such as Adobe Premiere Pro. I have a fair understanding of HTML and CSS and am working on imporving it. I've spent time in Blender and understand the basics of 3D graphics but I am very willing to know more. Outside of the computer I have some experience in photography and </p>
+                  <p>I am proficient in Adobe Photoshop and Adobe Illustrator. I am also learning some of the other softwares in the Creative Cloud suite, such as Adobe Premiere Pro. I have a fair understanding of HTML and CSS and am working on imporving it. I've spent time in Blender and understand the basics of 3D graphics but I am very willing to know more. Outside of the computer I have some experience in photography and papercrafts.</p>
 
                   <h2>Hobbies and Interests</h2>
                   <p>My current hobbies are reading and crochet. Some of my interests are listening to music, Pokemon, and 3D animation. Sometimes i combine my Hobby of crochet and my interests to make designs, currently i am working on an Eelektrik (from Pokemon) amigurumi and drafting a pattern for a Kinger (from The Digital Circus) amigurumi.</p>
