--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
       </head>
       <body>
             <header>
-                  <img src="/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
+                  <img src="Portfolio/images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
                   <div class="header-text">
                         <a href="index.html">Main</a>
                         <a href="about me.html">About Me</a>
