--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
       <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="main.css">
-            <title>Gallery</title>
+            <title>Gallery | Rose Portfolio</title>
 
       </head>
       <body>
