--- a/index.html
+++ b/index.html
@@ -3,39 +3,36 @@
       <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="main.css">
-            <title>Website Index</title>
+            <title>Rose Portfolio</title>
 
       </head>
       <body>
             <header>
                   <img src="./images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
-                  <div class="header-text">
+                  <div class="header-links">
                         <a href="index.html">Main</a>
                         <a href="about me.html">About Me</a>
                         <a href="gallery.html">Gallery</a>
+                        <a></a>
                   </div>
-                  <img src="">
+                  <img src="" alt="Menu Toggle" class="menu-toggle">
             </header>
             <main>
-                  <h1>
-                        Welcome to my site!
-                  </h1>
+                  <h1>Welcome to my site!</h1>
                   <p>This is my portfolio site for 2023. It will be updated.</p>
 
-                  <h2>
-                        About Me:
-                  </h2>
+                  <h2>About Me:</h2>
                   <p>I am currently studying graphic design. <a href="about me.html">Read More and contact</a></p>
                   <figure>
-                        <img src="" alt=""> <!--TODO GET THE IMAGE FROM MUM-->
-                        <figcaption>A photo of me when i gratuated high school</figcaption>
+                        <img src="./images/Grad Photo.jpg" alt="A photo of me, Margaret. I am sitting on a chair sideways, my arms are leaned on the back of the chair and my head is leaned against my left hand. My hair is shoulder length and brown. I am wearing sqaure glasses and a monochrome dress where the top is white and bottom is black." width="350px">
+                        <figcaption>A photo of me when i gratuated high school in 2023</figcaption>
                   </figure>
 
                   
 
             </main>
             <footer>
-                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a></a>.</p>
+                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a href="www">Instagram</a>.</p>
             </footer>
       </body>
       <!--
