--- a/about me.html
+++ b/about me.html
@@ -3,7 +3,7 @@
       <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="main.css">
-            <title>About me</title>
+            <title>About | Rose Portfolio</title>
 
       </head>
       <body>
@@ -47,11 +47,11 @@
                   <img src="" alt="Pinterest Logo">
                   <img src="" alt="Instagram Logo">
                   -->
-                  <div class="align-left">
+                  <div class="left50">
                         <h3>Link to me!</h3>
                         <code>https://margaretjohnson6.github.io/Portfolio/index.html</code>
                   </div>
-                  <div class="align-right">
+                  <div class="right50">
                         <h3>Link with an image!</h3>
                         <a><img src="" href="https://margaretjohnson6.github.io/Portfolio/index.html" alt=""></a>
                         <code></code>
