--- a/about me.html
+++ b/about me.html
@@ -3,18 +3,22 @@
       <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="main.css">
-            <title>About | Rose Portfolio</title>
-
+            <title>About | Roses Portfolio</title>
+            <!-- Fonts -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
       </head>
       <body>
-            <header>
-                  <img src="./images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
-                  <div class="header-text">
-                        <a href="index.html">Main</a>
-                        <a href="about me.html">About Me</a>
-                        <a href="gallery.html">Gallery</a>
-                  </div>
-                  <img src="">
+            <header id="header">
+                  <img src="./images/Word Logo.svg" alt="The word Rose, the 'o' is a simplified cat head." class="logo">
+                  <nav>
+                        <ul>
+                              <li><a href="./index.html">Main</a></li>
+                              <li><a href="./about me.html">About Me</a></li>
+                              <li><a href="./gallery.html">Gallery</a></li>
+                        </ul>
+                  </nav>
             </header>
             <main>
                   <h1>About Margaret:</h1>
@@ -39,28 +43,19 @@
                   <h1 id="contact">Contact me:</h1>
                   <p>For more professional inquiries reach out on <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>.<br>For informal inquiries you can reach out to me on <a href="">Instagram</a>(Account not up yet.).</p>
 
-                  <!-- i have commmented this out due to the lack of accounts, but these seem to be where i can connect professionally
                   <h2>Connect with me:</h2>
-                  <p>Connect with me on my professional social media</p>
-                  <img src="" alt="Linkedin Logo">
-                  <img src="" alt="Youtube Logo">
-                  <img src="" alt="Pinterest Logo">
-                  <img src="" alt="Instagram Logo">
-                  -->
-                  <div class="left50">
-                        <h3>Link to me!</h3>
-                        <code>https://margaretjohnson6.github.io/Portfolio/index.html</code>
-                  </div>
-                  <div class="right50">
-                        <h3>Link with an image!</h3>
-                        <a><img src="" href="https://margaretjohnson6.github.io/Portfolio/index.html" alt=""></a>
-                        <code></code>
+                  <p>Connect with me on my professional social media.</p>
+                  <div class="lineup">
+                        <img src="./images/external/linkedin_icon.png" alt="Linkedin Logo" href="">
+                        <img src="./images/external/youtube_icon.png" alt="Youtube Logo">
+                        <img src="./images/external/pinterest_icon.png" alt="Pinterest Logo">
+                        <img src="./images/external/instagram_icon.png" alt="Instagram Logo">
                   </div>
                   
 
             </main>
             <footer>
-                  <p> &copy;2023 Margaret Johnson</p>
+                  <p> &copy;2023 Margaret Rose</p>
             </footer>
       </body>
             
