--- a/gallery.html
+++ b/gallery.html
@@ -3,27 +3,31 @@
       <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="main.css">
-            <title>Gallery | Rose Portfolio</title>
+            <title>Gallery | Roses Portfolio</title>
 
+            <!-- Indexing Information -->
+            <meta name="description" content="This is the gallery page.">
+            <meta name="keywords" content="graphic design, Margaret Rose, Margaret Johnson, portfolio, gallery">
+
+            <!-- Fonts -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
       </head>
       <body>
-            <header>
-                  <img src="./images/logo-r.png" height="40px" alt="My logo in red, a simplified cat head." class="logo">
-                  <div class="header-text">
-                        <a href="index.html">Main</a>
-                        <a href="about me.html">About Me</a>
-                        <a href="gallery.html">Gallery</a>
-                  </div>
-                  <img src="">
+            <header id = header>
+                  <img src="./images/Word Logo.svg" alt="The word Rose, the 'o' is a simplified cat head." class="logo">
+                  <nav>
+                        <ul>
+                              <li><a href="./index.html">Main</a></li>
+                              <li><a href="./about me.html">About Me</a></li>
+                              <li><a href="./gallery.html">Gallery</a></li>
+                        </ul>
+                  </nav>
             </header>
             <main>
                   <p style="font-size: larger;">Placeholder images from place kitten.</p>
                   <table>
-                        <thead>
-                              <tr>
-                                    <tr colspan="0"><img src="https://placekitten.com/800/100" alt="Placeholder image of a cat."></tr>
-                              </tr>
-                        </thead>
                         <tbody>
                               <tr>
                                    <td rowspan="3"><img src="https://placekitten.com/200/600" alt="Placeholder image of a cat."></td> 
@@ -51,7 +55,7 @@
                  
             </main>
             <footer>
-                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a></a>.</p>
+                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a></a> <a href="#header">Top</a></p>
             </footer>
       </body>
             
