--- a/gallery.html
+++ b/gallery.html
@@ -15,16 +15,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
       </head>
       <body>
-            <header id = header>
-                  <img src="./images/Word Logo.svg" alt="The word Rose, the 'o' is a simplified cat head." class="logo">
-                  <nav>
-                        <ul>
-                              <li><a href="./index.html">Main</a></li>
-                              <li><a href="./about me.html">About Me</a></li>
-                              <li><a href="./gallery.html">Gallery</a></li>
-                        </ul>
-                  </nav>
-            </header>
+            <header id = header></header>
             <main>
                   <p style="font-size: larger;">Placeholder images from place kitten.</p>
                   <table>
@@ -57,6 +48,8 @@
             <footer>
                   <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a></a> <a href="#header">Top</a></p>
             </footer>
+            <!-- Scripts -->
+            <script src="./script.js"></script>
       </body>
             
 </html>
