--- a/about me.html
+++ b/about me.html
@@ -10,16 +10,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
       </head>
       <body>
-            <header id="header">
-                  <img src="./images/Word Logo.svg" alt="The word Rose, the 'o' is a simplified cat head." class="logo">
-                  <nav>
-                        <ul>
-                              <li><a href="./index.html">Main</a></li>
-                              <li><a href="./about me.html">About Me</a></li>
-                              <li><a href="./gallery.html">Gallery</a></li>
-                        </ul>
-                  </nav>
-            </header>
+            <header id="header"></header>
             <main>
                   <h1>About Margaret:</h1>
                   <p>Hello, i am Margaret Rose, Rose is my personal professional branding but you could call me by either name. 
@@ -57,6 +48,8 @@
             <footer>
                   <p> &copy;2023 Margaret Rose</p>
             </footer>
+            <!-- Scripts -->
+            <script src="./script.js"></script>
       </body>
             
 </html>
