Javascript header and footer, favicon

--- a/about me.html
+++ b/about me.html
@@ -4,6 +4,14 @@
             <meta charset="UTF-8">
             <link rel="stylesheet" href="main.css">
             <title>About | Roses Portfolio</title>
+
+            <!-- Indexing Information -->
+            <meta name="description" content="About Margaret Rose Johnson">
+            <meta name="keywords" content="graphic design, Margaret Rose, Margaret Johnson, about me, contact">
+
+            <!-- Favicon -->
+            <link rel="icon" type="image/png" href="./images/logo-r.png">
+
             <!-- Fonts -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,9 +53,7 @@
                   
 
             </main>
-            <footer>
-                  <p> &copy;2023 Margaret Rose</p>
-            </footer>
+            <footer id="footer"></footer>
             <!-- Scripts -->
             <script src="./script.js"></script>
       </body>
