--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <meta name="description" content="This is the webpage of Margaret Rose. I am studying graphic design.">
             <meta name="keywords" content="graphic design, Margaret Rose, Margaret Johnson, portfolio">
 
-            
+            <!-- Favicon -->
+            <link rel="icon" type="image/png" href="./images/logo-r.png">
 
             <!-- Fonts -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,9 +38,7 @@
                   
 
             </main>
-            <footer>
-                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a href="www">Instagram</a>.</p>
-            </footer>
+            <footer id="footer"></footer>
             <!-- Scripts -->
             <script src="./script.js"></script>
       </body>
