--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,9 @@
             <meta name="description" content="This is the gallery page.">
             <meta name="keywords" content="graphic design, Margaret Rose, Margaret Johnson, portfolio, gallery">
 
+            <!-- Favicon -->
+            <link rel="icon" type="image/png" href="./images/logo-r.png">
+
             <!-- Fonts -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,9 +48,7 @@
                   </table>
                  
             </main>
-            <footer>
-                  <p> &copy;2023 Margaret Johnson, Contact: <a href="https://www.linkedin.com/in/margaret-johnson-450b06288/">Linkedin</a>. Connect: <a></a> <a href="#header">Top</a></p>
-            </footer>
+            <footer id="footer"></footer>
             <!-- Scripts -->
             <script src="./script.js"></script>
       </body>
