--- a/about me.html
+++ b/about me.html
@@ -46,7 +46,7 @@
                   <h2>Connect with me:</h2>
                   <p>Connect with me on my professional social media.</p>
                   <div class="lineup">
-                        <img src="./images/external/linkedin_icon.png" alt="Linkedin Logo" href="">
+                        <img src="./images/external/linkedin_icon.png" alt="Linkedin Logo" href="https://www.linkedin.com/in/margaret-johnson-450b06288/">
                         <img src="./images/external/youtube_icon.png" alt="Youtube Logo">
                         <img src="./images/external/pinterest_icon.png" alt="Pinterest Logo">
                         <img src="./images/external/instagram_icon.png" alt="Instagram Logo">
